# embed-files

./: .envrc  Cargo.toml  README.md
assets/: language_mappings.ron
examples/: prompt.txt
examples/dir1/: file3.ts  file4.tsx
examples/dir2/: file8.js
prompts/: fix_the_test.md  system.md  temp.md  仕様.md  仕様修正.md  仕様修正提案.md  工程.md
scripts/: update_languages.rs
scripts/common/: mod.rs
scripts/test/: update_languages.rs
src/: cli.rs  eftemplate.rs  error.rs  executor.rs  language_mapping.rs  lib.rs  main.rs  path_resolver.rs  template.rs  warning.rs
tests/: integration.rs
tests/common/: mod.rs
tests/integration/: mod.rs
