[package]
name = "ef"
version = "0.1.0"
edition = "2021"
default-run = "ef"

[dependencies]
anyhow = "1.0.95"
clap = { version = "4.5.24", features = ["derive"] }
colored = "3.0.0"
env_logger = "0.11.6"
glob = "0.3.2"
log = "0.4.22"
once_cell = "1.20.2"
pathdiff = "0.2.3"
regex = "1.11.1"
tempfile = "3.15.0"
thiserror = "2.0.10"

[dev-dependencies]
mockito = "1.6.1"
similar-asserts = "1.6.0"
temp-env = "0.3.6"
tempfile = "3.15.0"
